start new section

--- a/Categoris/categoris.html
+++ b/Categoris/categoris.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <a href="/vegetables/vegetables.html">
+                    <a href="vegetables/vegetables.html">
                         <img src="products/broco.png" alt="">
                         <div class="desc"><h2>Vegetables</h2>
                             <div class="number-pro">
