start programing checkout site

--- a/Categoris/vegetables/vegetables.html
+++ b/Categoris/vegetables/vegetables.html
@@ -1,70 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categoris</title>
     <link rel="stylesheet" href="vegetables.css">
 </head>
+
 <body>
     <section>
-    <div class="brocoli-container">
-        <img src="/Categoris/vegetables/imgs/brocoli.png" alt="">
-    </div>
-    <div class="vegetables-container">
-        <div class="back-container">
-            <a href="/index.html"><img src="imgs/back.png" alt=""></a>
+        <div class="brocoli-container">
+            <img src="/Categoris/vegetables/imgs/brocoli.png" alt="">
         </div>
-        <div class="title-container">
-            <h2>Vegetables</h2>
-        </div>
-        <div class="bar-container">
-            <form>
-                <img src="/Icon/search.png" alt="">
-                <input type="text" placeholder="Search">
-            </form>
-        </div>
-        <div  class="subjects-container">
-            <div class="subject-container active">
-                <h2>Cabbages and lettuce(14)</h2>
+        <div class="vegetables-container">
+            <div class="back-container">
+                <a href="/Categoris/categoris.html"><img src="imgs/back.png" alt=""></a>
             </div>
-            <div class="subject-container">
-                <h2>Сucumbers and tomatoes(10)</h2>
+            <div class="title-container">
+                <h2>Vegetables</h2>
             </div>
-            <div class="subject-container">
-                <h2>Peppers(3)</h2>
+            <div class="bar-container">
+                <form>
+                    <img src="/Icon/search.png" alt="">
+                    <input type="text" placeholder="Search">
+                </form>
             </div>
-            <div class="subject-container">  
-                <h2>Onions and garlic(5)</h2>
-            </div>
-            <div class="subject-container">
-                <h2>Potatoes(9)</h2>
-            </div>
-        </div>
-        <div class="products-container">
-            <div class="product-container">
-                <div class="img-container">
-                    <img src="/Categoris/vegetables/imgs/Boston.png" alt="">
+            <div class="subjects-container">
+                <div class="subject-container active">
+                    <h2 class="active">Cabbages and lettuce (14)</h2>
                 </div>
-                <div class="description">
-                    <h2>Boston Lettuce</h2>
-                   <div class="price">
-                    <h3>1.10</h3>
-                    <p>€ / piece</p>
-                   </div>
-                   <div class="bottan-container">
-                    <div class="favorite-button">
-                        <img src="/Categoris/vegetables/imgs/heart.png" alt="">
-                    </div>
-                    <div class="buy-button">
-                        <img src="/Categoris/vegetables/imgs/shopping-cart.png" alt="">
-                    </div>
-                   </div>
+                <div class="subject-container">
+                    <h2>Сucumbers and tomatoes (10)</h2>
+                </div>
+                <div class="subject-container">
+                    <h2>Peppers (3)</h2>
+                </div>
+                <div class="subject-container">
+                    <h2>Onions and garlic (5)</h2>
+                </div>
+                <div class="subject-container">
+                    <h2>Potatoes (9)</h2>
                 </div>
             </div>
-        </div>
+            <div class="products-container">
+                <div class="product-container">
+                    <div class="img-container">
+                        <img src="/Categoris/vegetables/imgs/Boston.png" alt="">
+                    </div>
+                    <div class="description">
+                        <h2>Boston Lettuce</h2>
+                        <div class="price">
+                            <h3>1.10</h3>
+                            <p>€ / piece</p>
+                        </div>
+                        <div class="bottan-container">
+                            <div class="favorite-button">
+                                <img src="/Categoris/vegetables/imgs/heart.png" alt="">
+                            </div>
+                            <div class="buy-button">
+                                <a href="/Categoris/vegetables/Boston/boston.html" class="boston-lettuce">
+                                    <img src="/Categoris/vegetables/imgs/shopping-cart.png" alt="">
+                                </a>
 
-    </div>
-</section>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-container">
+                    <div class="img-container">
+                        <img src="/Categoris/vegetables/imgs/Purple.png" alt="">
+                    </div>
+                    <div class="description">
+                        <h2>Boston Lettuce</h2>
+                        <div class="price">
+                            <h3>1.45</h3>
+                            <p>€ / kg</p>
+                        </div>
+                        <div class="bottan-container">
+                            <div class="favorite-button">
+                                <img src="/Categoris/vegetables/imgs/heart.png" alt="">
+                            </div>
+                            <div class="buy-button">
+                                <img src="/Categoris/vegetables/imgs/shopping-cart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-container">
+                    <div class="img-container">
+                        <img src="/Categoris/vegetables/imgs/savoy.png" alt="">
+                    </div>
+                    <div class="description">
+                        <h2>Boston Lettuce</h2>
+                        <div class="price">
+                            <h3>1.85</h3>
+                            <p>€ / kg</p>
+                        </div>
+                        <div class="bottan-container">
+                            <div class="favorite-button">
+                                <img src="/Categoris/vegetables/imgs/heart.png" alt="">
+                            </div>
+                            <div class="buy-button">
+                                <img src="/Categoris/vegetables/imgs/shopping-cart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="shopPanel-container">
+            <div class="box"><img src="/Categoris/imgs/grid.png" alt=""></div>
+            <div class="box"><img src="/Categoris/imgs/shopping-cart.png" alt=""></div>
+            <div class="box"><img src="/Categoris/imgs/user.png" alt=""></div>
+
+        </div>
+    </section>
 </body>
-    
