finish phone responible

--- a/Categoris/vegetables/Boston/checkout/checkout.html
+++ b/Categoris/vegetables/Boston/checkout/checkout.html
@@ -96,13 +96,15 @@
                     </div>
                 </div>
                 <div class="shopPanel-container">
-                    <div class="box"><img src="/Categoris/imgs/grid.png" alt=""></div>
-                    <div class="box">
+                    <div class="box"><img src="/Categoris/vegetables/Boston/checkout/payment.html/icon/grid.png" alt=""></div>
+                    <a href="payment.html/payment.html"> <div class="box">
                         <div class="product-value">
                             <p>8</p>
                         </div>
                         <img src="/Categoris/imgs/shopping-cart.png" alt="">
                     </div>
+                </a>
+                   
                     <div class="box"><img src="/Categoris/imgs/user.png" alt=""></div>
 
                 </div>
